# Computacao-Grafica

./: CMakeLists.txt  README.md  engine.cpp  example.xml  gen.cpp  point.h  triangle.h
examples/: annulus.3d  annulus.xml  cone.3d  cylinder.3d  cylinder.xml  ellipsoid.3d  ellipsoid.xml  frustum.xml  plane.3d  plane1.3d  plane2.3d  torus.3d
examples/first_delivery/: box.xml  box1.3d  frustum.3d  plane.3d  plane.xml  solarsystem.xml  sphere.xml  torus.xml  two_figures1.xml
examples/fourth_delivery/: annulusLightTest.3d  annulusTextureTest.3d  boxLightTest.3d  coneLightTest.3d  cylinderLightTest.3d  planeLightTest.3d  planeTextureTest.3d  sphereLightTest.3d  sphereTextureTest.3d  testLight.xml  testTexture.xml  torusLightTest.3d  tp.3d
examples/fourth_delivery/solar_system/: Earth.tif  Jupiter.tif  Mars.tif  Mercury.tif  Neptune.tif  Saturn.tif  Uranus.tif  Venus.tif  moon.3d  (+12 more)
examples/second_delivery/: .example_v4.xml.swp  example_v2.xml  example_v4.xml  gaseous.3d  gaseous_trajectory.3d  gaseous_v3.3d  lighthouse.xml  lighthouse_body.3d  man_eye.3d  man_foot.3d  man_hair.3d  man_leg.3d  moon.3d  ringA.3d  ringA_v3.3d  ringB.3d  ringC.3d  ringD.3d  ringD_v3.3d  solarsystem.xml  solarsystem_v2.xml  solarsystem_v3.xml  solarsystem_v4.xml  sphere.3d  sun.3d  sun_v2.3d  terrestrial.3d
examples/third_delivery/: box.3d  rotateTest.xml  rotateTestBind.xml  torus.3d  tp.3d  tp.xml  translationTest.xml
phase1/: box.cpp  generator.cpp  plane.cpp
src/: 3d_to_xml.gawk  CMakeLists.txt  Makefile  engine.cpp  engine_tinyxml2.cpp  example_v2.xml  example_v3.xml  gen.cpp  generator.cpp  group.h  plane.cpp  point.h  triangle.h
src/engine/: engine.cpp  group.h  light.h  rotation.h  translation.h
src/engine_linear/: engine.cpp  group.h
src/engine_tree/: .engine.cpp.swp  engine.cpp  geoTransform.h  group.h  rotate.h  scale.h  transform.h  translate.h  translation.h
src/tinyxml/: CMakeLists.txt  Makefile
tinyxml/: tinystr.h.gch  tinyxml.h.gch
(+34 files in other folders)
